feat: Adding oracle dependency

--- a/Back/Banco-de-Talentos/src/main/resources/application-dev.properties
+++ b/Back/Banco-de-Talentos/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.drive-class-name=oracle.jdbc.driver.OracleDriver
 
-spring.datasource.url=jdbc:oracle://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
+spring.datasource.url=jdbc:oracle:thin:@//${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
 spring.datasource.username=${PROD_DB_USERNAME}
 spring.datasource.password=${PROD_DB_PASSWORD}
 
