feat: Implement PDF viewer

--- a/Front/Banco-de-Talentos/angular.json
+++ b/Front/Banco-de-Talentos/angular.json
@@ -20,6 +20,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "pdfjs-dist/build/pdf",
+              "pdfjs-dist/web/pdf_viewer"
+            ],
             "outputPath": "dist/banco-de-talentos",
             "index": "src/index.html",
             "main": "src/main.ts",
