--- a/Front/Banco-de-Talentos/package.json
+++ b/Front/Banco-de-Talentos/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "ng2-pdf-viewer": "^9.1.5",
     "primeflex": "^3.3.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.3",
