--- a/Front/Banco-de-Talentos/angular.json
+++ b/Front/Banco-de-Talentos/angular.json
@@ -29,8 +29,11 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/assets/styles"]
+            },
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/assets/styles/styles.scss"],
             "scripts": []
           },
           "configurations": {
