feat: Implement environment properties in DataSourceConfig

--- a/Back/Banco-de-Talentos/src/main/resources/application-dev.properties
+++ b/Back/Banco-de-Talentos/src/main/resources/application-dev.properties
@@ -5,3 +5,8 @@ spring.datasource.password=${PROD_DB_PASSWORD}
 
 app.jwt-secret=${JWT_SECRET}
 app.jwt-expiration-milliseconds=259200000
+
+bdt.port=${PROD_DB_PORT}
+bdt.dbname=${PROD_DB_NAME}
+bdt.user=${PROD_DB_USERNAME}
+bdt.password=${PROD_DB_PASSWORD}
